# nhis-okf-compiler

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/skills/data-science/: SKILL.md
.github/workflows/: ci.yml
.okf/: index.md  log.md
.okf/variables/: DIBAGETC_A.md  DIBEV_A.md  DIBINS_A.md  DIBPILL_A.md  HEIGHTTC_A.md  HYPEV_A.md  HYPMED_A.md  PREDIB_A.md  TREND_diabetes_2018_2023.md  WEIGHTLBTC_A.md
NhisOkfChat/agentcore/: agentcore.json  aws-targets.json
NhisOkfChat/app/NhisOkfChat/: build_runtime.py  main.py  pyproject.toml
agentcore/: agentcore.json
app/: build_runtime.py  main.py  requirements.txt
concepts/: DIBAGETC_A.yaml  DIBAGETC_A__naive.yaml  DIBEV_A.yaml  DIBEV_A__tightci.yaml  DIBINS_A.yaml  DIBINS_A__naive.yaml  DIBPILL_A.yaml  HEIGHTTC_A.yaml  HEIGHTTC_A__rawcodes.yaml  HYPEV_A.yaml  HYPMED_A.yaml  HYPMED_A__naive.yaml  PREDIB_A.yaml  WEIGHTLBTC_A.yaml  WEIGHTLBTC_A__rawcodes.yaml
concepts/trends/: TREND_bmi__naive.yaml  TREND_diabetes_2018_2023.yaml  TREND_diabetes__naive.yaml
deploy/: README.md
deploy/agentcore/: agentcore.json  requirements.txt
deploy/infra/: app.py  cdk.json  requirements.txt
deploy/lambda/: app.js  handler.py  index.html
docs/: PRODUCT.md  SAMPLE.md
nhisokf/agentcore/: .gitignore  agentcore.json
nhisokf/app/nhisokf/: main.py  pyproject.toml
nhisokf/app/nhisokf/okf/: log.md
nhisokf/app/nhisokf/okf/variables/: DIBEV_A.md  DIBINS_A.md
openspec/: project.md
openspec/changes/add-agent-row-inspection-with-okf-summaries/: design.md
openspec/changes/add-body-measures-and-bmi-recode-catch/: design.md  proposal.md  tasks.md
openspec/changes/add-body-measures-and-bmi-recode-catch/specs/okf-compiler/: spec.md
openspec/changes/add-clean-agentcore-runtime-project/: design.md  proposal.md  tasks.md
openspec/changes/add-clean-agentcore-runtime-project/specs/okf-compiler/: spec.md
openspec/changes/add-parquet-and-subpopulation-query/: design.md  proposal.md  tasks.md
openspec/changes/add-parquet-and-subpopulation-query/specs/okf-compiler/: spec.md
openspec/changes/add-researcher-row-query-tool/: design.md  proposal.md  tasks.md
openspec/changes/add-researcher-row-query-tool/specs/okf-compiler/: spec.md
openspec/changes/add-subpopulation-agent-tool/: design.md  proposal.md  tasks.md
openspec/changes/add-subpopulation-agent-tool/specs/okf-compiler/: spec.md
openspec/changes/add-weighted-groupby-table-tool/: design.md  proposal.md  tasks.md
openspec/changes/add-weighted-groupby-table-tool/specs/okf-compiler/: spec.md
openspec/changes/archive/2026-07-10-add-agent-row-inspection-with-okf-summaries/: proposal.md  tasks.md
openspec/changes/archive/2026-07-10-shape-nhisokfchat-two-tool-deploy/: design.md  proposal.md  tasks.md
openspec/changes/build-end-to-end-nhis-okf/: design.md  proposal.md  tasks.md
openspec/changes/build-end-to-end-nhis-okf/specs/okf-compiler/: spec.md
openspec/changes/package-nhis-okf-for-codezip/: proposal.md  tasks.md
openspec/changes/package-nhis-okf-for-codezip/specs/okf-compiler/: spec.md
openspec/changes/reconcile-deploy-remove-nhisokf/: proposal.md  tasks.md
openspec/specs/okf-compiler/: spec.md
src/nhis_okf/: agentcore_app.py  analysis.py  chat.py  cli.py  compiler.py  concepts.py  config.py  parquet_query.py  registry.py  retrieval.py  trends.py  verify.py
tests/: conftest.py  test_analysis.py  test_body_measures.py  test_chat.py  test_ci.py  test_compile_and_retrieval.py  test_conformance.py  test_groupby.py  test_hypertension.py  test_parquet.py  test_rows.py  test_runtime_bundle_override.py  test_runtime_smoke.py  test_runtime_vendor.py  test_subpopulation.py  test_trends.py  test_universe_allowlist.py  test_verify.py
(+3 files in other folders)
