[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nhis-okf-compiler"
version = "0.1.0"
description = "Compile CDC NHIS into a verified Open Knowledge Format bundle with execution-grounded verification."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "scikit-learn>=1.3",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
# Strands grounded-answering agent (Anthropic API locally, Bedrock at deploy).
agent = ["strands-agents>=1.0", "anthropic>=0.40"]
# AgentCore Runtime SDK for deploy (import: bedrock_agentcore).
deploy = ["bedrock-agentcore>=1.9.1"]

[project.scripts]
nhis = "nhis_okf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
