[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NhisOkfChat"
version = "0.1.0"
description = "AgentCore runtime: grounded NHIS-OKF chat (retrieval-only over the verified bundle)"
readme = "README.md"
requires-python = ">=3.10"
# Third-party deps AgentCore installs at deploy. Retrieval-only: sklearn/numpy/PyYAML for the
# TF-IDF retrieval over the vendored .okf bundle. NO pandas/pyarrow (compute stays local).
# The `nhis_okf` package itself is vendored into ./nhis_okf by build_runtime.py, not pip-installed.
dependencies = [
    "aws-opentelemetry-distro",
    "bedrock-agentcore >= 1.9.1",
    "strands-agents >= 1.15.0",
    "scikit-learn >= 1.3",
    "numpy >= 1.24",
    "PyYAML >= 6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
